# manipulator-project

./: README.md
Arduino-Bot/arduinobot_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
Arduino-Bot/arduinobot_ws/log/: latest_build
Robotics-and-ROS-2-Learn-by-Doing-Manipulators/Documents/: Manipulatiors_Project_Requirements.txt
arduinobot_ws/: frames_2024-12-12_17.24.56.gv  obs_log.txt
arduinobot_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
arduinobot_ws/log/: latest_build  latest_list
arduinobot_ws/src/arduinobot_bringup/: CMakeLists.txt
arduinobot_ws/src/arduinobot_bringup/launch/: real_robot.launch.py  simulated_robot.launch.py
arduinobot_ws/src/arduinobot_controller/: CMakeLists.txt  arduinobot_controller.xml
arduinobot_ws/src/arduinobot_controller/config/: arduinobot_controllers.yaml
arduinobot_ws/src/arduinobot_cpp_examples/: CMakeLists.txt  package.xml
arduinobot_ws/src/arduinobot_cpp_examples/src/: simple_action_client.cpp  simple_action_server.cpp  simple_lifecycle_node.cpp  simple_moveit_interface.cpp  simple_parameter.cpp  simple_publisher.cpp  simple_service_client.cpp  simple_service_server.cpp  simple_subscriber.cpp
arduinobot_ws/src/arduinobot_description/: CMakeLists.txt  package.xml
arduinobot_ws/src/arduinobot_firmware/: CMakeLists.txt  package.xml
arduinobot_ws/src/arduinobot_moveit/: CMakeLists.txt  package.xml
arduinobot_ws/src/arduinobot_msgs/: CMakeLists.txt  package.xml
arduinobot_ws/src/arduinobot_py_examples/: package.xml  setup.py
arduinobot_ws/src/arduinobot_remote/: CMakeLists.txt
arduinobot_ws/src/arduinobot_utils/: CMakeLists.txt
log/: latest_build
(+436 files in other folders)
